--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,7 @@ services:
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
+            - '../src/Model/'
             - '../src/Kernel.php'
             - '../src/Tests/'
 
